Release 0.5-1 (//):
  * Add scaler() to center and/or scale efficiently.

Release 0.5-0 (4/24/2016):
  * Implement inplace methods for correlation and covariance (correlation is
	always doneinplance)
  * Add 'inplace' argument.
  * Implement use='pairwise.complete.obs' methods.
  * Several small performance improvements.

Release 0.4-0 (4/4/2016):
  * Implement a fast naomit for dense internals.
  * Add 'use' argument.
  * Implement use with "everything", "all.obs", and "complete.obs".
  * Add fix to coop_covar_vecvec for older compilers.

Release 0.3-1 (3/22/2016):
  * Add support for dgCMatrix from Matrix.
  * Lower cost (time/mem) to rebuild the vignette.
  * Retain column names as row/col names in all co-operations.

Release 0.3-0 (3/17/2016):
  * Rename package to 'coop'.
  * 'Namespaced' the internal lib.
  * Improved vignettes, package description.
  * Use https in inst/CITATION.
  * Release to CRAN.

Release 0.2-2 (3/11/2016);
  * Split vignette into 2.
  * Improve R help.

Release 0.2-1 (3/9/2016):
  * Better memory allocation checking.
  * Move sparsity functions from wrappers.c to sparse_utils.c.

Release 0.2-0 (3/6/2016):
  * Add covariance and pearson correlation.
  * Rename package from fastcosim to fastco.
  * Major re-organization of internals.
  * Better tests.

Release 0.1-0 (12/9/2016):
  * Add cosine() function.
  * Add dense matrix, dense vector-vector, and sparse matrix methods.