@@ -33,29 +33,29 @@
 #define CHECKMALLOC(x) if(x==NULL) return -1
 
 // dense
-int coop_cosine_mat(const int m, const int n, const double *restrict x, double *restrict cos);
-int coop_cosine_vecvec(const int n, const double *restrict x, const double *restrict y, double *restrict cos);
+int coop_cosine_mat(const int m, const int n, const double * const restrict x, double *restrict cos);
+int coop_cosine_vecvec(const int n, const double * const restrict x, const double * const restrict y, double *restrict cos);
 
-int coop_pcor_mat(const int m, const int n, const double *restrict x, double *restrict cor);
-int coop_pcor_vecvec(const int n, const double *restrict x, const double *restrict y, double *restrict cor);
+int coop_pcor_mat(const int m, const int n, const double * const restrict x, double *restrict cor);
+int coop_pcor_vecvec(const int n, const double * const restrict x, const double * const restrict y, double *restrict cor);
 
-int coop_covar_mat(const int m, const int n, const double *restrict x, double *restrict cov);
-int coop_covar_vecvec(const int n, const double *x, const double *y, double *restrict cov);
+int coop_covar_mat(const int m, const int n, const double * const restrict x, double *restrict cov);
+int coop_covar_vecvec(const int n, const double * const x, const double * const y, double *restrict cov);
 
 // dense - inplace
 int coop_covar_mat_inplace(const int m, const int n, const double *restrict x, double *restrict cov);
-int coop_pcor_mat_inplace(const int m, const int n, const double *restrict x, double *restrict cor);
+int coop_pcor_mat_inplace(const int m, const int n, const double * const restrict x, double *restrict cor);
 
 // dense - pairwise complete observations (inplace)
-int coop_cosine_mat_inplace_pairwise(const int m, const int n, const double *restrict x, double *restrict cos);
-int coop_pcor_mat_inplace_pairwise(const int m, const int n, const double *restrict x, double *restrict cor);
-int coop_covar_mat_inplace_pairwise(const int m, const int n, const double *restrict x, double *restrict cov);
+int coop_cosine_mat_inplace_pairwise(const int m, const int n, const double * const restrict x, double *restrict cos);
+int coop_pcor_mat_inplace_pairwise(const int m, const int n, const double * const restrict x, double *restrict cor);
+int coop_covar_mat_inplace_pairwise(const int m, const int n, const double * const restrict x, double *restrict cov);
 
 // scale
 int coop_scale(const bool centerx, const bool scalex, const int m, const int n, double *restrict x, double *restrict colmeans, double *restrict colvars);
 
 // sparse
-int coop_cosine_sparse_coo(const int index, const int n, const int len, const double *restrict a, const int *restrict rows, const int *restrict cols, double *restrict cos);
+int coop_cosine_sparse_coo(const int index, const int n, const int len, const double * const restrict a, const int *restrict rows, const int *restrict cols, double *restrict cos);
 
 // special values
 void set_na_real(double *val);
