@@ -1,5 +1,6 @@
 Release 0.5-1 (//):
   * Add scaler() to center and/or scale efficiently.
+  * Use default(none) in all threaded OpenMP statements.
 
 Release 0.5-0 (4/24/2016):
   * Implement inplace methods for correlation and covariance (correlation is
